# allegro-project

./: .gitignore  CMakeLists.txt  build.sh  build_emscripten.sh
src/: common.c
